--- a/template.html
+++ b/template.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" href="https://fav.farm/🎨" />
-  <link rel="stylesheet" href="./preview.css">
+  <link rel="stylesheet" href="./css/preview.css">
   <title>Benjamin Moore Paints as CSS Colours</title>
 </head>
 
@@ -14,7 +14,7 @@
   <h1>Benjamin Moore Paints as CSS Colours</h1>
 
   <!-- DUMP_ME_HERE -->
-  <script src="./scripts.js"></script>
+  <script src="./css/scripts.js"></script>
 </body>
 
 </html>
